<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoanFragmentMain"
    android:background="@color/flipi_background"
    >


    <ImageView
        android:id="@+id/title_app"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="52dp"
        android:src="@mipmap/logo_muni"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/flipi_background"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/title_app"
        app:strokeWidth="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="15dp"
            android:background="@drawable/lineblackcorner"
            android:paddingVertical="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/introduzca_sus_datos"
                android:textColor="@color/flipi_dark_blue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nombre"
                android:inputType="text"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_apellido"
                android:inputType="text"
                android:textSize="15sp" />

            <!--            <Spinner-->
            <!--                android:id="@+id/spinner_geero"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:background="@android:drawable/btn_dropdown"-->
            <!--                android:spinnerMode="dropdown"/>-->

            <EditText
                android:id="@+id/genero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_genero"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/dni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_dni"
                android:inputType="number"
                android:maxLength="9"
                android:textSize="15sp" />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/ln_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView"
        app:layout_constraintVertical_bias="0.25"
        tools:text="Status Loan: Aprobado"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/ln_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/ln_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/flipi_dark_blue"
            android:elevation="5dp"
            android:text="@string/btn_verificar_estado_crediticio" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/flipi_dark_blue"
            android:elevation="5dp"
            android:text="@string/btn_lista_peticiones" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>