<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="NestedWeights"
    >
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/flipi_background"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        app:cardCornerRadius="10dp"
        app:strokeWidth="0dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            android:padding="10dp">

            <TextView
                android:id="@+id/title_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_item_prestamo"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/campo_nombre"
                    android:textSize="15sp"
                    android:textColor="#000000"
                    android:layout_marginEnd="5dp"
                    />
                <EditText
                    android:id="@+id/et_nombre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_weight="1"
                    android:backgroundTint="#808080"
                    android:inputType="text"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/campo_apellido"
                    android:textSize="15sp"
                    android:textColor="#000000"
                    android:layout_marginEnd="5dp"
                    />

                <EditText
                    android:id="@+id/et_apellido"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_weight="1"
                    android:backgroundTint="#808080"
                    android:inputType="text"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/campo_email"
                    android:textSize="15sp"
                    android:textColor="#000000"
                    android:layout_marginEnd="5dp"
                    />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_weight="1"
                    android:backgroundTint="#808080"
                    android:inputType="textEmailAddress"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/campo_genero"
                    android:textSize="15sp"
                    android:textColor="#000000"
                    android:layout_marginEnd="5dp"
                    />

                <EditText
                    android:id="@+id/et_genero"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_weight="1"
                    android:backgroundTint="#808080"
                    android:inputType="text"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center_vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/campo_dni"
                    android:textSize="15sp"
                    android:textColor="#000000"
                    android:layout_marginEnd="5dp"
                    />

                <TextView
                    android:id="@+id/et_dni"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_weight="1"
                    android:backgroundTint="#808080"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/btn_modificar_solicitud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/flipi_dark_blue"
                android:text="@string/btn_modificar_solicitud_prestamo"
                android:layout_gravity="center_horizontal"
                />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>